err/edtf.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/edtf'...
Listing './lib/python3.5/site-packages/edtf/natlang'...
Compiling './lib/python3.5/site-packages/edtf/natlang/en.py'...
***   File "./lib/python3.5/site-packages/edtf/natlang/en.py", line 11
    DEFAULT_DATE_1 = datetime(1234, 01, 01, 0, 0)
                                     ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/edtf/natlang/tests.py'...
***   File "./lib/python3.5/site-packages/edtf/natlang/tests.py", line 205
    print "%s => %s" % (i, e)
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/edtf/parser'...
Compiling './lib/python3.5/site-packages/edtf/parser/parser_classes.py'...
***   File "./lib/python3.5/site-packages/edtf/parser/parser_classes.py", line 39
    print "trying to %s.__init__(**%s)" % (cls.__name__, kwargs)
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/edtf-2.7.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
